@@ -952,6 +952,38 @@ class Gravity_Flow_Status_Table extends WP_List_Table {
 			$url_entry = esc_url( $this->get_entry_url( $item ) );
 
 			$label = $step ? esc_html( $step->get_name() ) : '';
+			$step_status = rgar( $item, 'workflow_step_status_' . $step->get_id() );
+
+			if ( 'queued' == $step_status ) {
+
+				$step->_entry = $item;
+				$scheduled_timestamp = $step->get_schedule_timestamp();
+				switch ( $step->schedule_type ) {
+					case 'date':
+						$scheduled_date = $step->schedule_date;
+						break;
+					case 'date_field':
+						$scheduled_date_str = date( 'Y-m-d H:i:s', $scheduled_timestamp );
+						$scheduled_date     = get_date_from_gmt( $scheduled_date_str );
+						break;
+					case 'delay':
+					default:
+						$scheduled_date_str = date( 'Y-m-d H:i:s', $scheduled_timestamp );
+						$scheduled_date     = get_date_from_gmt( $scheduled_date_str );
+				}
+
+				$label .= '' . sprintf( '<div class="step_status_queue">(%s: %s)</div>', esc_html__( 'Queued', 'gravityflow' ), $scheduled_date );
+
+			}
+
+			if ( $step->supports_expiration() && $step->expiration ) {
+				$step->_entry = $item;
+				$expiration_timestamp = $step->get_expiration_timestamp();
+				$expiration_date_str  = date( 'Y-m-d H:i:s', $expiration_timestamp );
+				$expiration_date      = get_date_from_gmt( $expiration_date_str );
+				$label .= sprintf( '<div class="step_status_expires">(%s: %s)</div>', esc_html__( 'Expires', 'gravityflow' ), $expiration_date );
+			}
+
 			$label = $this->filter_field_value( $label, $item, 'workflow_step' );
 			$link  = "<a href='{$url_entry}'>$label</a>";
 			$output = $link;
