@@ -3,8 +3,9 @@
 - Added gravityflow_entry_webhook_response_mapping to allow the entry/response values to be adjusted during webhook response mapping.
 - Added gravityflow_columns_inbox_table to allow columns in inbox to be adjusted in similar fashion to status (gravityflow_columns_status_table)
 - Added gravityflow_date_format_current_step_merge_tag filter to allow the date/time-based modifiers for {current_step} adjust format: expiration, schedule, and start.
+- Added gravityflow_feed_condition_entry_properties filter to allow modifying entry properties in the feed condition.
+- Updated the Status Table Step Column to display the queued start time for a scheduled step and the expiration time for a step when set.
 - Updated the Entry Detail workflow info box display of step expiration date to use existing gravityflow_date_format_entry_detail filter.
 - Updated the step condition setting, inbox, and status pages to support custom payment statuses added by the gform_payment_statuses filter with Gravity Forms 2.4 and greater.
 - Fixed an issue with the Multi-User field on the entry detail pages where the ID is displayed instead of the user's name.
 - Fixed an issue with the File Upload field display the inbox shortcode page via fields attribute. The file icon/link was not displaying and generating PHP error.
-- Added gravityflow_feed_condition_entry_properties filter to allow modifying entry properties in the feed condition.
